--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.15",
-    "expo-router": "~6.0.19",
+    "expo-router": "~6.0.20",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
@@ -42,6 +42,7 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-purchases": "^9.6.10",
+    "react-native-purchases-ui": "^9.6.10",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
