--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@supabase/supabase-js": "^2.88.0",
     "base-64": "^1.0.0",
     "expo": "~54.0.29",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
