robust features added into clubs - event scheduling, forum postings, club management

--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.proxy-social.app",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCalendarsUsageDescription": "Proxy needs access to your calendar to add club events.",
+        "NSRemindersUsageDescription": "Proxy needs access to your reminders to add club events."
       }
     },
     "android": {
@@ -28,7 +30,9 @@
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.RECORD_AUDIO"
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_CALENDAR",
+        "android.permission.WRITE_CALENDAR"
       ]
     },
     "web": {
