referral system added

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~54.0.29",
     "expo-calendar": "~15.0.8",
     "expo-camera": "~17.0.10",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
