--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-location": "~19.0.8",
     "expo-notifications": "~0.32.15",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "supabase": "^2.67.2",
