--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Proxy",
-    "slug": "proxy-business",
-    "version": "1.3.3",
+    "name": "proxyme",
+    "slug": "proxyme",
+    "version": "1.4.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "proxybusiness",
@@ -74,8 +74,8 @@
       [
         "expo-location",
         {
-          "locationAlwaysAndWhenInUsePermission": "Allow Proxy to use your location to find people nearby.",
-          "locationWhenInUsePermission": "Allow Proxy to use your location to find people nearby."
+          "locationAlwaysAndWhenInUsePermission": "Allow Proxy to use your location to find people nearby. Your information is not shared with anyone.",
+          "locationWhenInUsePermission": "Allow Proxy to use your location to find people nearby. Your information is not shared with anyone."
         }
       ],
       [
