--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.88.0",
     "base-64": "^1.0.0",
     "expo": "~54.0.29",
+    "expo-blur": "~15.0.8",
     "expo-calendar": "~15.0.8",
     "expo-camera": "~17.0.10",
     "expo-clipboard": "~8.0.8",
