--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@sentry/react-native": "^6.22.0",
     "@supabase/supabase-js": "^2.88.0",
     "base-64": "^1.0.0",
     "expo": "~54.0.29",
