--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 # dependencies
 node_modules/
 
+# Next.js / Vercel
+.next/
+out/
+.vercel/
+web/.next/
+web/out/
+
 # Expo
 .expo/
 dist/
@@ -41,3 +48,5 @@ app-example
 # generated native folders
 /ios
 /android
+
+
