--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "installCommand": "cd web && npm install",
-  "buildCommand": "cd web && npm run build",
-  "devCommand": "cd web && npm run dev",
-  "outputDirectory": "web/.next"
+  "builds": [
+    {
+      "src": "web/package.json",
+      "use": "@vercel/next"
+    }
+  ]
 }
