--- a/package.json
+++ b/package.json
@@ -63,10 +63,16 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.16",
+    "react-test-renderer": "19.1.0",
     "sharp": "^0.34.5",
     "supabase": "^2.67.2",
     "typescript": "~5.9.2"
